--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.flashtranslator"
+        applicationId "com.example.latranslator"
         minSdkVersion 30
         targetSdkVersion 33
         versionCode 1
