--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flashtranslator">
+    package="com.example.latranslator">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
-        android:name="com.example.flashtranslator.App"
+        android:name="com.example.latranslator.App"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FlashTranslator">
+        android:theme="@style/Theme.LaTranslator">
 
-        <service android:name="com.example.flashtranslator.TranslateAccessibilityService"
+        <service android:name="com.example.latranslator.TranslateAccessibilityService"
             android:label="@string/app_name"
             android:enabled="true"
             android:exported="true"
@@ -28,7 +28,7 @@
             <meta-data android:name="android.accessibilityservice" android:resource="@xml/accessibility" />
         </service>
 
-        <activity android:name="com.example.flashtranslator.MainActivity" android:exported="true">
+        <activity android:name="com.example.latranslator.MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
