--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.8.10'
+        kotlin_version = '1.8.21'
         hiltVersion = '2.42'
         fragmentKtx = '1.4.1'
         dataStoreVersion = "1.1.0-alpha02"
@@ -29,6 +29,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
