--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     // ViewModel
     implementation "androidx.fragment:fragment-ktx:$fragmentKtx"
 
+    // ColorPicker
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
+
     // Leakcanary
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 }
