--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
@@ -14,7 +14,7 @@ android {
         minSdkVersion 30
         targetSdkVersion 33
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
