--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,10 @@ dependencies {
     // ColorPicker
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
 
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:32.3.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
     // Leakcanary
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 }
