--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
+    // Google ads
+    implementation 'com.google.android.gms:play-services-ads:22.4.0'
+
     // Leakcanary
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 }
