--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 
     <application
         android:name="com.example.latranslator.App"
@@ -14,7 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LaTranslator">
 
-        <service android:name="com.example.latranslator.TranslateAccessibilityService"
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-5371604315427290~6242034828"/>
+
+        <service android:name="com.example.latranslator.services.TranslateAccessibilityService"
             android:label="@string/app_name"
             android:enabled="true"
             android:exported="true"
@@ -26,14 +31,14 @@
             <meta-data android:name="android.accessibilityservice" android:resource="@xml/accessibility" />
         </service>
 
-        <service android:name="com.example.latranslator.InstantTranslationService"
+        <service android:name="com.example.latranslator.services.InstantTranslationService"
             android:label="@string/app_name"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
         </service>
 
-        <activity android:name="com.example.latranslator.MainActivity"
+        <activity android:name="com.example.latranslator.activities.MainActivity"
             android:screenOrientation="locked"
             android:exported="true">
             <intent-filter>
@@ -43,7 +48,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ProcessTextTransparentInstantActivity"
+        <activity android:name=".activities.ProcessTextTransparentInstantActivity"
             android:theme="@style/Theme.AppCompat.Translucent"
             android:launchMode="singleTop"
             android:exported="true">
