--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,13 +15,13 @@ android {
         }
     }
 
-    compileSdk 33
+    compileSdk 34
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.mata.latranslator"
         minSdkVersion 30
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0.0"
 
@@ -51,20 +51,20 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "androidx.core:core-ktx:1.10.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.core:core-ktx:1.12.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0-rc01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.4'
 
     // Dagger Hilt
     kapt "com.google.dagger:hilt-compiler:$hiltVersion"
@@ -88,6 +88,9 @@ dependencies {
 
     // Google ads
     implementation 'com.google.android.gms:play-services-ads:22.4.0'
+
+    // in-app purchases
+    implementation 'com.android.billingclient:billing:6.0.1'
 
     // Leakcanary
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
