--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:22.4.0'
 
     // in-app purchases
-    implementation 'com.android.billingclient:billing:6.0.1'
+    implementation "com.android.billingclient:billing-ktx:6.0.1"
 
     // Leakcanary
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
