--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <application
         android:name="com.example.latranslator.App"
         android:allowBackup="true"
+        android:isAccessibilityTool="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -24,6 +25,7 @@
             android:label="@string/app_name"
             android:enabled="true"
             android:exported="true"
+            android:isAccessibilityTool="false"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -35,8 +37,7 @@
         <service android:name="com.example.latranslator.services.InstantTranslationService"
             android:label="@string/app_name"
             android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            android:exported="true">
         </service>
 
         <activity android:name="com.example.latranslator.activities.MainActivity"
